styles.css
@media (prefers-reduced-motion: no-preference) {
  * {
    scroll-behavior: smooth;
  }
}

/* Mobile Responsive Design */
/* Base styles for mobile */
.container {
  width: 100%;
  padding: 15px;
}

/* Base styles for mobile */
body {
  font-size: 16px;
}


/* Styles for smaller screens */
@media screen and (max-width: 768px) {
  .andy-container {
    flex-direction: column;
    align-items: center;
    padding: 30px;
  }
}


/*
/* Styles for larger screens 
@media screen and (min-width: 768px) {
  body {
    font-size: 18px;
  }

  .container {
    width: 750px;
    margin: 0 auto;
    padding: 20px;
  }
}

/* Styles for desktops 
@media screen and (min-width: 1024px) {
  .container {
    width: 960px;
  }
}
*/
/* Green color: #9ee2bfff */
/* Light green: #e0f2e9ff */

* {
  box-sizing: border-box;
}

:root {
  --dark-green: #9ee2bf;
  --mid-green: #bfecd3;
  --light-green: #dff6e9;
  --dark-comp: #E2A69E;
}

body {
  background: whitesmoke;
  color: black;
  font-family: Rubik;

}

/* HEADER AND FOOTER STUFF */

nav,
footer {
  width: 100%;
  background-color: var(--dark-green);
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  z-index: 999;
}

.nav {
  height: 70px;
  position: fixed;
  top: 0;
  left: 0;
  border-bottom: 5px double black;
  width: 100%;
  font-size: min(3vw, 1em);
  gap: 2em;
}

.nav-list {
  margin: 0;
  padding: 2px;
  position: fixed;
  right: 0;
  width: 70vw;
}

.nav-list li {
  list-style: none;
  margin: 0 1em;
  gap: 2em;
  padding: 2px;
}

.nav li {
  float: right;
}

.nav-list a,
footer a {
  border-bottom: 5px double transparent;
  text-align: center;
  justify-content: center;
  bottom: 0;
  color: black;
  text-decoration: none;
}

.nav-list a:hover,
footer a:hover {
  border-bottom: 5px double black;
  /*font-weight: bold;*/
  cursor: pointer;
  color: black;
  text-decoration: none;
}

footer {
  height: 40px;
  position: fixed;
  top: calc(100vh - 40px);
  /* bottom: 0; */
  left: 0;
  border-top: 5px double black;
  width: 100%;
  flex-wrap: wrap;
  font-size: min(3vw, 0.7em);
  gap: 2em;
  justify-content: center;
  /* TODO: GET RID OF FOOTER AT BOTTOM */
}



/* LOGO STUFF */
.logo {
  text-decoration: none;
  color: black;
  position: fixed;
  left: 1.2em;
  text-align: center;
  justify-content: left;
  padding: 0 5px;
}

.logo h1,
h2 {
  padding: 0;
  margin: 0;
}

.logo h1 {
  font-size: min(5vw, 1.6em);
  text-align: center;
  font-weight: bolder;
}

.logo h2 {
  font-size: min(2vw, 0.8em);
  font-weight: lighter;
}

a[class~="logo"]:hover {
  /* color: #525252FF; */
  background-color: var(--light-green);
  color: inherit;
}








section {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  position: absolute;
  top: 70px;
  left: 0;
  padding-bottom: 45px;
  width: 100%; 
}

/* HOME PAGE STUFF */

.andy-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
  width: 100%;
  padding: 30px;
  padding-right: 10%;
  /* display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    padding: 30px;
    padding-right: 10%;
    */
}

#pfp {
  /*height: auto; 
  border-radius: 20px;  
  border: 5px solid blue;  
  width: min(80vw, 400px); 
  position: relative; 
  left: 0; 
  */
  width: 40%;
  min-width: 300px;
  max-width: 400px;
  border-radius: 20px;
  /*
   width: 40%;
    min-width: 300px;
    max-width: 400px;
    */
}

#bio {
  margin: 15px;
  width: 55%;
  min-width: 300px;
  /*width: max(calc(90% - 550px), 40px);
  border: 5px solid green; 
  float: left; 
  */
  /*  font-family: "Molengo", serif;
    font-size: 1.2rem;
    color: var(--offwhite);
    line-height: 1;
    margin: 20px;
    */
}



/* PRODUCTION STUFF */

.gallery {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 16px;
  width: 100%;
  /* max-width: 1400px; */
  margin: 0 auto;
  padding: 20px 10px;
}

.gallery img {
  width: 30vw;
  max-width: 350px;
  height: 300px;
  object-fit: cover;
  border-radius: 10px;
}


.gallery::after {
  content: "";
  width: 350px;
}

.production-gallery {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  width: 100%;
  gap: 5px; 
  /* max-width: 1400px; */
  margin: 0 auto;
  padding: 20px 10px;
}

.production-gallery img {
  aspect-ratio: 3 / 2;
  width: 31vw;
  height: auto;
  object-fit: cover;
  min-width: 300px;
}


.about-show {
  display: flex;
  justify-content: space-evenly;
  margin: 0 auto;
}

.empty-block {
  height: 20px;
}

.team-position {
  font-weight: bold;
}

/* PROJECTS STUFF */

.headliner {
  background-color: var(--mid-green);
  font-size: 1.6rem;
  width: 100%;
  display: flex;
  flex-direction: row;
  gap: 20px;
  left: 0;
  border-bottom: 5px double black;
  padding: 0 10px;
  position: sticky;
  top: 70px;
  z-index: 995;
}

.all-projects p {
  padding: 5px 40px;
}

.all-projects h3 {
  background-color: var(--light-green);
  display: flex;
  left: 0;
  border-bottom: 2px solid black;
  padding: 2px 25px;
  position: sticky;
  top: calc(80px + 1.4rem);
  z-index: 990;
  margin-top: 0;
  width: 100%; 
}


.grid-total {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 16px;
  max-width: 1400px;
  margin: 0 auto;
  padding: 20px 10px;
}

.grid-packet {
  width: 31vw;
  height: auto;
  object-fit: cover;
  min-width: 300px;
  position: relative;
  /*
  border: 3px solid red; 
  width: max(30vw, 300px);
  */
  
}


.grid-img {
  display: block;
  width: 100%;
  height: auto;
  /*border: 3px solid blue; */
}

.overlay {
  position: absolute;
  bottom: 0;
  height: 1.5em;
  width: 100%;
  opacity: 0;
  text-align: center;
  justify-content: center;
  align-items: center;
  border: 3px solid green; 
  /* transition: .5s ease; */
  background-color: black;
}

.grid-packet:hover .overlay {
  opacity: 0.8;
}

.grid-text {
  color: white;
  font-size: 20px;
}

.grid-total::after {
  content: "";
  width: 45vw;
}

.j-peterman {
  border-radius: 10px;
  width: 80%;
  height: auto;
  min-width: 300px; 
  position: static;
  margin-left: 10%;
  margin-bottom: 1em;
  margin-top: 1em;
  padding: 0 auto;
}

.suit-gallery {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 16px;
  width: 100%;
  /* max-width: 1400px; */
  margin: 0 auto;
  padding: 20px 10px;
}

.suit-gallery img {
  aspect-ratio: 2 / 3;
  height: 60vh;
  width: auto;
  object-fit: cover;
  min-width: 300px;
  border-radius: 10px;
}

.suit-gallery::after {
  content: "";
  width: 300px;
}

.final {
  border-radius: 10px;
  width: 100%;
}


.all-pics {
  width: 100%; 
  display: flex; 
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  /*border: 4px solid brown;*/
  gap: 10px; 
  margin: 0 auto;
  padding: 20px 10px;
}

.pic-box {
  display: flex; 
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 40vw; 
  min-width: 300px;
  gap: 5px; 
  /*border: 3px solid blue;*/
}

.big-pic {
  /*border: 3px solid red; */
  width: 40vw;
  min-width: 300px;
  max-width: 400px;
  height: auto;
  object-fit: contain;
  justify-content: flex-start;
}

.small-pic {
  aspect-ratio: 3 / 4;
  width: 30%; 
  min-width: 200px; 
  max-width: 250px;
}

/* Styles for smaller screens */
@media screen and (max-width: 768px) {
  .small-pic {
    min-width: 300px;
  }
}



/* RESUME STUFF */
.resume-all {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}


.resume {
  width: 80%; 
  height: auto; 
  margin: 0 auto; 
}

.resume-download {
  
  
  display: block; 
  text-align: center;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin: 10px; 
}

.resume-download a {
  color: black; 
  text-decoration: none;
  text-align: center;
  background-color: var(--dark-green);
  padding: 20px; 
  margin: 0 auto; 
  position: relative; 
  bottom: 20px; 
}


.resume-download a:hover {
  color: black; 
  text-decoration: none;
  text-align: center;
  background-color: var(--mid-green);
}



/* CONTACT FORM STUFF */

#survey-form label,
#survey-form button {
  display: block;
  margin: 10px auto 0 auto;
}


.form-star {
  color: red;
}


/* SCREEN READER STUFF */

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

